added some code

--- a/Notebooks/Analysis_Vu.ipynb
+++ b/Notebooks/Analysis_Vu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,23 +32,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NoneType"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "api_key = os.getenv(\"QUANDL_API_KEY\")\n",
-    "type(api_key)"
+    "api_key = os.getenv(\"ZIPCODE_API_KEY\")\n",
+    "type(api_key)\n",
+    "zip_code = 77002\n",
+    "distance = 50\n",
+    "units = \"miles\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"http://www.zipcodeapi.com/rest/{api_key}/radius.json/{zip_code}/{distance}/{units}\""
    ]
   },
   {
