Adding to Pseudo Code File

--- a/Notebooks/Pseudo_Code_Analysis.ipynb
+++ b/Notebooks/Pseudo_Code_Analysis.ipynb
@@ -18,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Price Per Square foot by Zip Code\n",
+    "#Pct change by Zip\n",
+    "#Price Per Square foot by Zip\n",
     "    #\"Date\" \"Zip\" \"Price Per Square foot\"\n",
     "#Schools\n",
     "    #\"Date\" \"Zip\" \"School District\" \"Grade\"\n",
