writing construction permits correlation code with sample csv permits and pct_chg resource files

--- a/Notebooks/Pseudo_Code_Dan.ipynb
+++ b/Notebooks/Pseudo_Code_Dan.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries and dependencies\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -47,7 +48,7 @@
     "#Population\n",
     "    #\"Date\" \"Zip\" \"Number of People\"\n",
     "#Construction Permits\n",
-    "    #\"Date\" \"Zip\" \"Type (Residential vs Commercial)\"\n",
+    "    #\"date\" \"zip\" \"permit_count\" \"permit_type\" (Residential vs Commercial)\n",
     "#Restaurant, Bars, & Clubs"
    ]
   },
@@ -57,9 +58,438 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize Dataframes\n",
-    "def correlate_construction_permits(permits_df):\n"
+    "#### Work In Progress\n",
+    "#### correlate_construction_permits\n",
+    "# def correlate_construction_permits(permits_df, pct_chg_df, groupby_month=bool):\n",
+    "#     # input: \"date\" \"zip\" \"permit_count\" \"permit_type\" (Residential vs Commercial)\n",
+    "#     # input: pct_chg_df with date, zip, pct_change\n",
+    "#     # return dataframe with date, zip, correlation_residential, correlation_commercial\n",
+    "    \n",
+    "#     # group permits_df by frequency\n",
+    "#     if groupby_month == True:\n",
+    "#         # group by yearh and month\n",
+    "#         permits_by_type_df = permits_df.groupby([index.month, index.year])['Type'].sum()\n",
+    "#     elif groupby_month == False:\n",
+    "#         # group only by year\n",
+    "#         permits_by_type_df = permits_df.groupby([index.year])['Type'].sum()\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#     combined_df = pd.concat([permits_df, pct_chg_df], axis=\"columns\", join=\"inner\")\n",
+    "#     # group by "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>permit_count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zip</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">77002</th>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-02-01</th>\n",
+       "      <td>618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-03-01</th>\n",
+       "      <td>306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-04-01</th>\n",
+       "      <td>725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-05-01</th>\n",
+       "      <td>507</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  permit_count\n",
+       "zip   date                    \n",
+       "77002 2016-01-01           771\n",
+       "      2016-02-01           618\n",
+       "      2016-03-01           306\n",
+       "      2016-04-01           725\n",
+       "      2016-05-01           507"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read in the construction permits data\n",
+    "permits_data = Path(\"../resources/dan/sample_permits_dan.csv\")\n",
+    "permits = pd.read_csv(construction_permits_data, sep='\\t')\n",
+    "\n",
+    "# set 'date' column type to date with year and month only format\n",
+    "permits['date'] = pd.to_datetime(construction_permits['date'], format= '%Y%m')\n",
+    "\n",
+    "#  groupby zip and date then calculate sum of permit_count for each zip/date grouping\n",
+    "permits_by_zipdate = construction_permits.groupby(['zip','date']).sum()\n",
+    "\n",
+    "# spot check data\n",
+    "permits_by_zipdate.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>pct_chg</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zip</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">77002</th>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-02-01</th>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-03-01</th>\n",
+       "      <td>-0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-04-01</th>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-05-01</th>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  pct_chg\n",
+       "zip   date               \n",
+       "77002 2016-01-01     0.07\n",
+       "      2016-02-01     0.09\n",
+       "      2016-03-01    -0.02\n",
+       "      2016-04-01     0.01\n",
+       "      2016-05-01     0.02"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read in the pct_change data\n",
+    "pct_chg_data = Path(\"../resources/dan/sample_pct_chg_dan.csv\")\n",
+    "pct_chg = pd.read_csv(pct_chg_data, sep='\\t')\n",
+    "\n",
+    "# set 'date' column type to date with year and month only format\n",
+    "pct_chg['date'] = pd.to_datetime(pct_chg['date'], format= '%Y%m')\n",
+    "\n",
+    "# groupby zip and date then calculate sum of permit_count for each zip/date grouping\n",
+    "pct_chg_by_zipdate = pct_chg.groupby(['zip','date']).sum()\n",
+    "\n",
+    "# spot check data\n",
+    "pct_chg_by_zipdate.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>permit_count</th>\n",
+       "      <th>pct_chg</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zip</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">77002</th>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>771</td>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-02-01</th>\n",
+       "      <td>618</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-03-01</th>\n",
+       "      <td>306</td>\n",
+       "      <td>-0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-04-01</th>\n",
+       "      <td>725</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-05-01</th>\n",
+       "      <td>507</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">77004</th>\n",
+       "      <th>2020-02-01</th>\n",
+       "      <td>513</td>\n",
+       "      <td>-0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-01</th>\n",
+       "      <td>597</td>\n",
+       "      <td>-0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-01</th>\n",
+       "      <td>258</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-01</th>\n",
+       "      <td>464</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-01</th>\n",
+       "      <td>360</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>162 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  permit_count  pct_chg\n",
+       "zip   date                             \n",
+       "77002 2016-01-01           771     0.07\n",
+       "      2016-02-01           618     0.09\n",
+       "      2016-03-01           306    -0.02\n",
+       "      2016-04-01           725     0.01\n",
+       "      2016-05-01           507     0.02\n",
+       "...                        ...      ...\n",
+       "77004 2020-02-01           513    -0.03\n",
+       "      2020-03-01           597    -0.03\n",
+       "      2020-04-01           258     0.04\n",
+       "      2020-05-01           464     0.09\n",
+       "      2020-06-01           360     0.02\n",
+       "\n",
+       "[162 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  combine permits_by_zipdate and pct_chg_by_zipdate by matching indexes\n",
+    "combined_permits_pct_chg_df = pd.concat([permits_by_zipdate, pct_chg_by_zipdate], axis=\"columns\", join=\"inner\")\n",
+    "\n",
+    "# drop any null data rows\n",
+    "combined_permits_pct_chg_df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>permit_correlation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zip</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>77002</th>\n",
+       "      <td>0.199488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77003</th>\n",
+       "      <td>-0.091708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77004</th>\n",
+       "      <td>0.025493</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       permit_correlation\n",
+       "zip                      \n",
+       "77002            0.199488\n",
+       "77003           -0.091708\n",
+       "77004            0.025493"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Set column names for use in initializing dataframe, for appending rows, and for resetting index\n",
+    "cols = ['zip','permit_correlation']\n",
+    "\n",
+    "#initialize correlation_per_zip dataframe\n",
+    "correlation_per_zip = pd.DataFrame(columns=cols)\n",
+    "\n",
+    "# iterate through each zip\n",
+    "for zip, df in combined_permits_pct_chg_df.groupby(level=0):\n",
+    "\n",
+    "    # calculate correlation of this zip's permit count to pct_chg\n",
+    "    correlation_df = df.corr()\n",
+    "    \n",
+    "    # record specific correlation value from correlation dataframe\n",
+    "    correlation_value = correlation_df.loc['permit_count']['pct_chg']\n",
+    "    \n",
+    "    # create row/series based on this zip's correlation to append to  dataframe\n",
+    "    correlation_row = [{cols[0] : zip, cols[1] : correlation_value}]\n",
+    "    \n",
+    "    # append row to dataframe\n",
+    "    correlation_per_zip = correlation_per_zip.append(correlation_row)\n",
+    "\n",
+    "# reset  dataframe index to zip/cols[0]\n",
+    "correlation_per_zip.set_index(cols[0])\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
