add combined sample data

--- a/Notebooks/Pseudo_Code_Dan.ipynb
+++ b/Notebooks/Pseudo_Code_Dan.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,22 +69,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Construction Permits Correlation to pct_chg\n",
     "def correlate_construction_permits(permits_df, pct_chg_df, groupby_month=True):\n",
-    "    # input: permits_df with date, zip, permit_count, permit_type (permit_type: Residential vs Commercial)\n",
-    "    # input: pct_chg_df with date, zip, pct_change\n",
-    "    # return dataframe with zip, correlation (correlation of number of permits to pct change by zip code)\n",
+    "    \"\"\"\n",
+    "    inputs: \n",
+    "        permits_df - columns needed: date, zip, permit_count, permit_type (permit_type: Residential vs Commercial)\n",
+    "        pct_chg_df - columns needed: date, zip, pct_change\n",
+    "        grouby_month - True (default) keeps date resolution to month, False uses date resolution of year\n",
+    "    return: correlation_per_zip_df dataframe with zip, correlation (correlation of number of permits to pct change by zip code)\n",
+    "    \"\"\"\n",
     "    \n",
     "    # set 'date' column type to date with year+month or with only year format (for easier groupby date, later)\n",
     "    if groupby_month == True:\n",
     "        \n",
     "        # set 'date' column type to date with year+month only format\n",
-    "        permits_df['date'] = pd.to_datetime(permits_df['date'], format= '%Y%m')\n",
-    "        pct_chg_df['date'] = pd.to_datetime(pct_chg_df['date'], format= '%Y%m')\n",
+    "        permits_df['date'] = pd.to_datetime(permits_df['date'], format= '%Y%m', exact=False)\n",
+    "        pct_chg_df['date'] = pd.to_datetime(pct_chg_df['date'], format= '%Y%m', exact=False)\n",
     "        \n",
     "    elif groupby_month == False:\n",
     "        \n",
@@ -122,7 +126,7 @@
     "        # record specific correlation value from correlation dataframe\n",
     "        correlation_value = correlation_df.loc['permit_count']['pct_chg']\n",
     "\n",
-    "        # create row/series based on this zip's correlation to append to  dataframe\n",
+    "        # create row/series based on this zip's correlation to append to dataframe\n",
     "        correlation_row = [{cols[0] : zip, cols[1] : correlation_value}]\n",
     "\n",
     "        # append row to dataframe\n",
@@ -151,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +251,7 @@
        "77004            0.025493"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,6 +260,13 @@
     "# Print out test results for permits/pct_chg\n",
     "permit_test_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
