added code to see if zip code is within range

--- a/Notebooks/API_ZipCodes_Vu.ipynb
+++ b/Notebooks/API_ZipCodes_Vu.ipynb
@@ -2149,6 +2149,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Checking if df Zip Codes are in the list zip codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# # Must create a new dataframe to hold the data\n",
+    "# new_data_frame = pd.DataFrame()\n",
+    "\n",
+    "# # Must have a column in the datafile with \"Zip Code\"\n",
+    "# def returns_new_datafile(zip_code_list, datafile, new_data_frame):\n",
+    "#     count = 0\n",
+    "#     for line in datafile:\n",
+    "#         variable = datafile[\"Zip Code\"][count]\n",
+    "#         count += 1\n",
+    "#         if variable in zip_code_list:\n",
+    "#             new_data_frame = new_data_frame.append(datafile.iloc[count])\n",
+    "#     return new_data_frame\n",
+    "\n",
+    "# new_data_frame = returns_new_datafile()\n",
+    "        \n",
+    "        \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
