update clean_combine_data notebook

--- a/Notebooks/houston_permit_data.ipynb
+++ b/Notebooks/houston_permit_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4  1/23/2020  Unrestricted  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "4  1/23/2020  Unrestricted  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "2020-01-23      1  Unrestricted  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "2017-01-05  Unrestricted  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "array(['zip_code', 'permit_type', 'count', 'land_use'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "2017-01-05     Single Family Residential (Public Street)  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,6 +795,60 @@
     "\n",
     "# write dataframe to csv with index (keep date) and header info\n",
     "permits_df.to_csv(cleaned_permits_filepath, index=True, header=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2017-01-05    is this working\n",
+       "2017-01-19    is this working\n",
+       "2017-02-02    is this working\n",
+       "2017-03-13    is this working\n",
+       "2017-05-25    is this working\n",
+       "2017-06-22    is this working\n",
+       "2017-07-27    is this working\n",
+       "2017-07-27    is this working\n",
+       "2017-11-30    is this working\n",
+       "2017-12-14    is this working\n",
+       "2018-01-04    is this working\n",
+       "2018-01-18    is this working\n",
+       "2018-03-01    is this working\n",
+       "2018-03-15    is this working\n",
+       "2018-03-29    is this working\n",
+       "2018-03-29    is this working\n",
+       "2018-04-26    is this working\n",
+       "2018-07-05    is this working\n",
+       "2018-07-30    is this working\n",
+       "2018-08-27    is this working\n",
+       "2018-09-10    is this working\n",
+       "2018-10-08    is this working\n",
+       "2019-02-14    is this working\n",
+       "2019-03-14    is this working\n",
+       "2019-03-14    is this working\n",
+       "2019-07-25    is this working\n",
+       "2019-08-08    is this working\n",
+       "2019-08-08    is this working\n",
+       "2019-08-22    is this working\n",
+       "2019-12-19    is this working\n",
+       "2019-12-19    is this working\n",
+       "2020-02-27    is this working\n",
+       "Name: permit_type, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "permits_df.loc[permits_df['zip_code'] == 77002, 'permit_type']  = \"is this working\"\n",
+    "permits_df.loc[permits_df['zip_code'] == 77002, 'permit_type']"
    ]
   },
   {
